--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Регистрация</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
     <h1>Регистрация</h1>
