--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="flash {{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <h1>Вход</h1>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
