--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="flash {{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <h1>Домашняя страница</h1>
     <a href="/login">Вход</a> | <a href="/register">Регистрация</a>
 </body>
