--- a/templates/register.html
+++ b/templates/register.html
@@ -2,8 +2,16 @@
 <html>
 <head>
     <title>Регистрация</title>
+    <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="flash {{ category }}">{{ message }}</div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <h1>Регистрация</h1>
     {% with messages = get_flashed_messages() %}
     {% if messages %}
